--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Tue Mar 21 19:20:21 CET 2017
-default.languagetoolchain.dir=/opt/microchip/xc8/v1.30/bin
-configurations-xml=276d7ff3b173b195812f9fbdb63cfdb2
+#Sun Mar 26 20:57:52 CEST 2017
+default.languagetoolchain.dir=/opt/microchip/xc8/v1.41/bin
+configurations-xml=60d608195001883017da14265e441ad1
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=8b140fb87818dc96ed4f726b716b40e9
-default.languagetoolchain.version=1.30
+default.languagetoolchain.version=1.41
 host.platform=linux
 conf.ids=default
 default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=1a80c324d373be944aab8c3a16e71c0c
