--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Mon Apr 10 00:04:10 CEST 2017
-default.languagetoolchain.dir=/opt/microchip/xc8/v1.41/bin
-configurations-xml=329cb50e2eb661a8dfa27db989a71d75
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=8b140fb87818dc96ed4f726b716b40e9
-default.languagetoolchain.version=1.41
+#Sun Jan 07 23:33:02 CET 2018
+default.languagetoolchain.dir=/opt/microchip/xc8/v1.44/bin
+configurations-xml=c23d38321a1a2eadcba603da30a5f4e1
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=d60721ed056d19183cb20bfa5aba57ae
+default.languagetoolchain.version=1.44
 host.platform=linux
 conf.ids=default
-default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=1a80c324d373be944aab8c3a16e71c0c
+default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=f2c5ed4f70e42738a0f2aee922f49302
